# Xatu

./: .env.example  Cargo.toml  README.md
src/: github.rs  main.rs  utils.rs
