[package]
name = "xatu"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
octocrab = "0.39.0"
serenity = "0.12.2"
tokio = {version="1.40.0", features=["rt-multi-thread"]}
tokio-cron-scheduler = "0.11.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
secrecy = "0.8.0"
dotenvy = "0.15.7"
